--- a/a.css
+++ b/a.css
@@ -1,1 +1,42 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap");
+
+.input-label {
+    color: #7b8794;
+    font-family: "Roboto";
+    font-size: 12px;
+    font-weight: bold;
+    margin-top: 16px;
+    margin-bottom: 16px;
+}
+
+.title-input {
+    border-style: solid;
+    border-radius: 5px;
+    border-width: 1px;
+    border-color: #cbd2d9;
+    height: 40px;
+    padding-left: 13px;
+    font-family: "Roboto";
+}
+
+.text-label {
+    border-style: solid;
+    border-radius: 5px;
+    border-width: 1px;
+    border-color: #cbd2d9;
+    color: #2d3a35;
+    font-family: "Roboto";
+}
+
+.movie-title {
+    font-weight: bold;
+    font-size: 18px;
+    margin-bottom: 16px;
+}
+
+.heading {
+    color: #2d3a35;
+    font-family: "Roboto";
+    font-size: 35px;
+    font-weight: 700;
+}
